--- a/css/global.css
+++ b/css/global.css
@@ -52,6 +52,11 @@ header div.container a p {
     color: #fefefe;
 }
 
+.info p {
+    font-size: 14px;
+    margin-top: 10px;
+    font-weight: 500;
+}
 
 footer {
     width: 100%;
