--- a/css/course/style.css
+++ b/css/course/style.css
@@ -62,3 +62,82 @@ section.cursos div.container div.choose-course div.bt-course p {
 section.cursos div.container div.choose-course div.bt-course:hover {
     background-color: #8257E5;
 }
+
+section.cursos div.container section.course {
+    width: 100%;
+    margin-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+    border: 1px solid #8257E5;
+}
+
+section.cursos div.container section.course div.title {
+    width: 100%;
+    height: 70px;
+    padding: 0px 50px 0px 50px;
+    display: flex;
+    align-items: center;
+    color: #B59DEB;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #8257E5;
+}
+
+section.cursos div.container section.course div.title p {
+    margin-left: 25px;
+    font-style: italic;
+}
+
+
+section.cursos div.container section.course div.videos {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding-right: 50px;
+    padding-left: 50px;
+    /* background-color: aquamarine; */
+}
+
+section.cursos div.container section.course div.videos iframe {
+    width: 100%;
+    height: 480px;
+    max-height: 720px;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+section.cursos div.container section.course div.videos div.video {
+    display: flex;
+    cursor: pointer;
+    transition: 0.3s;
+    /* flex-direction: column; */
+    /* background-color: cadetblue; */
+}
+
+section.cursos div.container section.course div.videos div.video:hover {
+    background-color: #2d2d33;
+}
+
+section.cursos div.container section.course div.videos div.video a {
+    color: #707070;
+    text-decoration: none;
+}
+
+section.cursos div.container section.course div.videos div.video:nth-child(n+2) {
+    margin-top: 50px;
+}
+section.cursos div.container section.course div.videos div.video img {
+    max-width: 360px;
+}
+
+section.cursos div.container section.course div.videos div.video div.details-video {
+    display: flex;
+    flex: 1;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding-left: 50px;
+    /* cursor: pointer; */
+    /* background-color: blueviolet; */
+}
