--- a/css/login/cadastro.css
+++ b/css/login/cadastro.css
@@ -5,7 +5,7 @@ div.cont section.sign-in {
 
 div.cont section.sign-in div.container div.card {
     width: 550px;
-    height: 600px;
+    min-height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
