--- a/css/login/login.css
+++ b/css/login/login.css
@@ -11,7 +11,7 @@ div.cont section.login {
 
 div.cont section.login div.container div.card {
     width: 550px;
-    height: 600px;
+    min-height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
