--- a/css/global.css
+++ b/css/global.css
@@ -62,9 +62,11 @@ header div.container a p {
 footer {
     width: 100%;
     height: 70px;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     color: #fefefe;
     background-color: #8257E5;
 }
