--- a/css/course/style.css
+++ b/css/course/style.css
@@ -2,6 +2,10 @@ body {
     background-color: #202024;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 section.cursos {
     min-height: calc(100vh - 170px);
     padding-bottom: 100px;
