--- a/projeto-site/public/css/course/style.css
+++ b/projeto-site/public/css/course/style.css
@@ -156,3 +156,122 @@ section.cursos div.container section.course div.videos div.video div.details-vid
     cursor: pointer;
     /* background-color: blueviolet; */
 }
+
+@media (max-width: 1100px) {
+    section.cursos div.container section.course div.videos iframe {
+        width: 100%;
+        height: 300px;
+    }
+
+    section.cursos div.container div.choose-course div.bt-course {
+        width: 185px;
+        height: 185px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 800px) {
+    section.cursos div.container section.course div.videos iframe {
+        width: 100%;
+        height: 300px;
+    }
+
+    section.cursos div.container div.choose-course div.bt-course {
+        width: 140px;
+        height: 140px;
+        margin-bottom: 10px;
+    }
+
+    section.cursos div.container div.choose-course div.bt-course:nth-child(n + 2) {
+        margin-left: 10px;
+    }
+
+    section.cursos div.container div.choose-course div.bt-course img  {
+        width: 40px;
+        margin-bottom: 5px;
+    }
+
+    section.cursos div.container section.course div.title {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        padding: 0px 15px 0px 15px;
+    }
+
+    section.cursos div.container section.course div.title p {
+        margin-top: 5px;
+    }
+
+    section.cursos div.container section.course div.videos {
+        padding: 0;
+    }
+    
+    section.cursos div.container section.course div.videos div.video img {
+        width: 30%;
+    }
+
+    section.cursos div.container section.course div.videos div.video div.details-video {
+        padding: 15px 15px 15px 15px;
+    }
+
+}
+
+@media (max-width: 600px) {
+    section.cursos div.container div.info select {
+        align-self: flex-end;
+    }
+
+    section.cursos div.container div.choose-course {
+        align-items: center;
+        justify-content: center;
+    }
+    section.cursos div.container div.choose-course div.bt-course {
+        width: 180px;
+        height: 100px;
+        margin-bottom: 10px;
+    }
+
+    section.cursos div.container div.choose-course div.bt-course:nth-child(n + 2) {
+        margin-left: 0px;
+    }
+
+    section.cursos div.container div.choose-course div.bt-course img  {
+        width: 40px;
+        margin-bottom: 5px;
+    }
+
+    section.cursos div.container section.course div.title {
+        width: 100%;
+        height: 120px;
+        flex-direction: column;
+        padding: 0px 15px 0px 15px;
+        padding-top: 15px;
+    }
+
+    section.cursos div.container section.course div.title p {
+        margin-left: 0px;
+        margin-top: 10px;
+        align-self: flex-end;
+    }
+
+    section.cursos div.container section.course div.videos iframe {
+        width: 100%;
+        height: 170px;
+    }
+
+    section.cursos div.container section.course div.videos {
+        padding: 0;
+    }
+    section.cursos div.container section.course div.videos div.video {
+        flex-direction: column;
+    }
+    
+    section.cursos div.container section.course div.videos div.video img {
+        width: 100%;
+    }
+
+    section.cursos div.container section.course div.videos div.video div.details-video {
+        padding: 15px 15px 15px 15px;
+    }
+
+}
